fix(tooltip): use opacity instead of visibility

--- a/src/SubComponents/Tooltip.css
+++ b/src/SubComponents/Tooltip.css
@@ -1,10 +1,10 @@
 @layer components {
   .pelcro-root .tooltip {
-    @apply plc-absolute plc-invisible;
+    @apply plc-absolute plc-opacity-0;
   }
 
   .pelcro-root .tooltip-container:hover .tooltip,
   .pelcro-root .tooltip:hover {
-    @apply plc-z-50 plc-visible;
+    @apply plc-z-50 plc-opacity-100;
   }
 }
